--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
   "homepage": "https://github.com/apati04/poll-app#readme",
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "react": "^15.4.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.3.2",
+    "webpack": "^2.3.2"
   }
 }
